Moved images dir

--- a/spanish-rules/RiotBoardGame-SpanishRules.tex
+++ b/spanish-rules/RiotBoardGame-SpanishRules.tex
@@ -20,7 +20,7 @@
 
 \renewcommand{\thesubsection}{\arabic{subsection}} % to remove the section numbers from subsections
 
-\graphicspath{ {./img/} }
+\graphicspath{ {../img/} }
 
 \title{RIOT Cast the First Stone}
 \subtitle{Reglas del juego en Espa\~nol}
