spanish: update website

--- a/spanish-rules/RiotBoardGame-SpanishRules.tex
+++ b/spanish-rules/RiotBoardGame-SpanishRules.tex
@@ -31,9 +31,9 @@
 \maketitle
 
 Una versi\'on actualizada y corregida de las reglas puede ser encontrada en nuestra web:
-\textbf{http://riotboardgame.com } 
+\url{https://noboardgames.com} 
 
-Para correcciones escribir a Ilario Gelmetti \texttt{ilario@eigenlab.org}
+Para correcciones escribir a Ilario Gelmetti \texttt{ilario@noboardgames.com}
 
 \section*{Piezas}
 1 tablero de juego - 42 cartas manifestantes - 10 cartas opini\'on publica - 2 cartas objetivo nacionalistas - 4
