french: update website

--- a/french-rules/RiotBoardGame-FrenchRules.tex
+++ b/french-rules/RiotBoardGame-FrenchRules.tex
@@ -31,7 +31,7 @@
 
 \maketitle
 
-\textbf{http://riotboardgame.com} 
+\url{https://noboardgames.com} 
 
 %Para correcciones escribir a Ilario Gelmetti \texttt{ilario@eigenlab.org}
 
